travel-chart/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: travel-helm
spec:
  podSelector: {}
  policyTypes:
  - Ingress
